--- a/app/views/alert_groups/new.html.haml
+++ b/app/views/alert_groups/new.html.haml
@@ -1,12 +1,18 @@
 - content_for(:subheader) do
-  .row.center.add-new
+  .row.center.add-new.collapse
     .col.pe-10
-      .row
-        .col
-          %h2
-            = link_to alert_groups_path, class: 'side-link', title: I18n.t('views.back') do
-              = image_tag "arrow-left-white.png"
-            New Alert
-
-= react_component('AlertCategorySelect', authenticity_token: form_authenticity_token, edit: false, alert_info: alert_info, category_types:Alert.category_types, url:"/alert_groups.json", sites:@sites, devices:@devices, anomalie_types:Alert.anomalie_types, aggregation_types:Alert.aggregation_types,aggregation_frequencies:Alert.aggregation_frequencies,channel_types:Alert.channel_types,roles:@roles, users: @users, conditions:@conditions, condition_results:@condition_results, condition_result_statuses:@condition_result_statuses, can_update: @can_update)
+      %h2
+        = link_to alert_groups_path, class: 'side-link', title: I18n.t('views.back') do
+          = image_tag "arrow-left-white.png"
+        New Alert
+  
+  .testflow
+    .container
+      .row.labelHeader
+        .col-6
+          %h3 
+            Alert Details
+        .col-6
+      .panel.box-content
+        = react_component('AlertCategorySelect', authenticity_token: form_authenticity_token, edit: false, alert_info: alert_info, category_types:Alert.category_types, url:"/alert_groups.json", sites:@sites, devices:@devices, anomalie_types:Alert.anomalie_types, aggregation_types:Alert.aggregation_types,aggregation_frequencies:Alert.aggregation_frequencies,channel_types:Alert.channel_types,roles:@roles, users: @users, conditions:@conditions, condition_results:@condition_results, condition_result_statuses:@condition_result_statuses, can_update: @can_update)
 
