--- a/app/views/episodes/_form.haml
+++ b/app/views/episodes/_form.haml
@@ -19,14 +19,13 @@
 
     });
 
-  .testflow
-    %ul.tab#epitabs
-      %li#tab_tb
-        = link_to I18n.t('episode_type.tb'),'#'
-      %li#tab_hiv
-        = link_to I18n.t('episode_type.hiv'),'#'
-      %li#tab_ebola
-        = link_to I18n.t('episode_type.ebola'),'#'
+  %ul.tabs#epitabs
+    %li#tab_tb
+      = link_to I18n.t('episode_type.tb'),'#'
+    %li#tab_hiv
+      = link_to I18n.t('episode_type.hiv'),'#'
+    %li#tab_ebola
+      = link_to I18n.t('episode_type.ebola'),'#'
 
   .panel#episodetype_ebola
     .row
@@ -70,5 +69,4 @@
     .zebra
       = react_component 'EpisodeSelectOutcome', outcomeOptions: outcome_options, selected: @episode.outcome
     .row.button-actions
-      .col
-        = f.submit
+      = f.submit
