--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,61 +1,67 @@
 = form_for(@user) do |f|
-  .row
-    .col
-      .row
-        .col.pe-2
-          = f.label :name
-        .col
-          .value= f.object.full_name
-      .row
-        .col.pe-2
-          = f.label :email
-        .col
-          .value= f.object.email
-      .row
-        .col.pe-2
-          = f.label :telephone
-        .col
-          .value= f.object.telephone
-      .row
-        .col.pe-2
-          = f.label :roles
-        .col
-          .value
-            = react_component 'OptionList', chosenOnes: @user_roles, callback: "/users/#{@user.id}/assign_role", autocompleteCallback: "/roles/autocomplete"
-    .col
-      .box.small.gray
-        - if @can_update
-          .row
-            .col.pe-2
-              .value= f.label :is_active
-            .col
-              .value
-                = f.check_box :is_active, class: 'power'
-                %label{:for => 'user_is_active'}
-                  = I18n.t('users.form.can_access')
+  .row.labelHeader 
+    .col-6
+      %h3
+        User Details
+    .col-6
+  .panel.box-content
+    .row
+      .col
         .row
           .col.pe-2
-            = f.label :last_sign_in_at
+            = f.label :name
           .col
-            .value= Presenters::Users.show_last_activity(f.object)
+            .value= f.object.full_name
+        .row
+          .col.pe-2
+            = f.label :email
+          .col
+            .value= f.object.email
+        .row
+          .col.pe-2
+            = f.label :telephone
+          .col
+            .value= f.object.telephone
+        .row
+          .col.pe-2
+            = f.label :roles
+          .col
+            .value
+              = react_component 'OptionList', chosenOnes: @user_roles, callback: "/users/#{@user.id}/assign_role", autocompleteCallback: "/roles/autocomplete"
+      .col
+        .box.small.gray
+          - if @can_update
+            .row
+              .col.pe-2
+                .value= f.label :is_active
+              .col
+                .value
+                  = f.check_box :is_active, class: 'power'
+                  %label{:for => 'user_is_active'}
+                    = I18n.t('users.form.can_access')
+          .row
+            .col.pe-2
+              = f.label :last_sign_in_at
+            .col
+              .value= Presenters::Users.show_last_activity(f.object)
 
-        - if @can_update
-          .row
-            .col.pe-2
-              .value
-                %label
-                  = I18n.t('users.form.resend_invite')
-            .col
-              .value
-                = link_to I18n.t('users.form.send'), 'resend_invite', class: 'btn-link'
-          .row
-            .col.pe-2
-              .value
-                %label
-                  = I18n.t('users.form.remove_user')
-            .col
-              .value
-                = link_to I18n.t('users.form.remove'), 'remove', class: 'btn-link'
+          - if @can_update
+            .row
+              .col.pe-2
+                .value
+                  %label
+                    = I18n.t('users.form.resend_invite')
+              .col
+                .value
+                  = link_to I18n.t('users.form.send'), 'resend_invite', class: 'btn-link'
+            .row
+              .col.pe-2
+                .value
+                  %label
+                    = I18n.t('users.form.remove_user')
+              .col
+                .value
+                  = link_to I18n.t('users.form.remove'), 'remove', class: 'btn-link'
 
   - if @can_update
     .row.button-actions
