--- a/app/views/dashboards/index.html.haml
+++ b/app/views/dashboards/index.html.haml
@@ -3,23 +3,7 @@
 
   %main
     = render partial: 'total_tests', locals: { total_tests: Extras::Charts::VerticalColumns.new(@dashboard_report.total_tests).render, failed_tests: Extras::Charts::Pie.new(@dashboard_report.failed_tests).render }
-    %section.row
-      .small-6.columns.box
-        %header
-          =image_tag('img/site.png')
-          %h3
-            = I18n.t('dashboard.index.total_tests_by_site')
-        .box-content
-          #chartTotalTestsSite{:style => "height: 200px; width: 100%;"}
-            = react_component 'CanvasJsChart', chartDiv: 'chartTotalTestsSite', chartData: Extras::Charts::HorizontalColumns.new(@dashboard_report.query_site_tests).render
-      .col.small-6.columns.box
-        %header
-          =image_tag('img/site.png')
-          %h3
-            = I18n.t('dashboard.index.average_tests_by_site')
-        .box-content
-          #chartAverageTestsSite{:style => "height: 200px; width: 100%;"}
-            = react_component 'CanvasJsChart', chartDiv: 'chartAverageTestsSite', chartData: Extras::Charts::VerticalColumns.new(@dashboard_report.average_test_per_site).render
+    = render partial: 'tests_by_site', locals: { query_site_tests: @dashboard_report.query_site_tests, average_test_per_site: @dashboard_report.average_test_per_site }
     %section
       .row
         .small-6.columns.box
