--- a/app/views/devices/_form.haml
+++ b/app/views/devices/_form.haml
@@ -37,12 +37,12 @@
     .col.pe-2
       = f.label :name
     .col
-      = f.text_field :name
+      = f.text_field :name, :class => 'input-large'
   .row
     .col.pe-2
       = f.label :serial_number
     .col
-      = f.text_field :serial_number
+      = f.text_field :serial_number, :class => 'input-large'
   .row
     .col.pe-2
       = f.label :time_zone
