--- a/app/assets/stylesheets/_components.scss
+++ b/app/assets/stylesheets/_components.scss
@@ -18,7 +18,7 @@
     background: $white;
     min-width: 500px;
     min-height: 400px;
-    padding: 0px 50px 100px 50px;
+    padding:30px;
     box-shadow: 0px 1px 15px 0px rgba(0, 0, 0, 0.6);
     margin-top: -5%;
     position: relative;
@@ -364,7 +364,7 @@
 ul.samples {
   > li {
     box-shadow: 0px 1px 3px rgba(0,0,0,0.3);
-    padding: 15px;
+    padding: 10px;
     width: 400px;
     margin-bottom: 5px;
     .unify {
@@ -441,7 +441,7 @@ ul.samples {
       background:#ffffff;
       border:1px solid #e2e2e2;
       padding:0px 15px;
-      margin:0px 15px;
+      margin:0px 15px 15px 15px;
     }
   }
 
