--- a/app/assets/stylesheets/_forms.scss
+++ b/app/assets/stylesheets/_forms.scss
@@ -72,6 +72,7 @@ label {
   padding:0px 5px;
   min-height:30px;
   background:#ececec;
+  display:inline-block;
 
   &.annotation {
     font-size: 80%;
