--- a/app/views/culture_results/new.haml
+++ b/app/views/culture_results/new.haml
@@ -12,4 +12,5 @@
         %h3
           = I18n.t('culture_results.new.header', patient_name: patient_display_name(@culture_result.patient.name))
       .col-6
-    = render 'form'
+    .box-content
+      = render 'form'
