--- a/app/views/dst_lpa_results/new.haml
+++ b/app/views/dst_lpa_results/new.haml
@@ -12,4 +12,5 @@
         %h3
           = I18n.t('dst_lpa_results.new.add_new', patient_name: patient_display_name(@dst_lpa_result.patient.name))
       .col-6
-    = render 'form'
+    .box-content
+      = render 'form'
