--- a/app/views/microscopy_results/new.haml
+++ b/app/views/microscopy_results/new.haml
@@ -12,4 +12,5 @@
         %h3
           = I18n.t('microscopy_results.new.header', patient_name: patient_display_name(@microscopy_result.patient.name))
       .col-6
-    = render 'form'
+    .box-content
+      = render 'form'
