--- a/app/views/xpert_results/edit.haml
+++ b/app/views/xpert_results/edit.haml
@@ -5,4 +5,5 @@
         %h3
           = I18n.t('xpert_results.edit.header', patient_name: patient_display_name(@xpert_result.patient.name))
       .col-6
-    = render 'form'
+    .box-content
+      = render 'form'
