--- a/app/views/dashboards/_tests_by_site.haml
+++ b/app/views/dashboards/_tests_by_site.haml
@@ -1,4 +1,4 @@
-= if query_site_tests[:columns].length > 1
+- if query_site_tests[:columns].length > 1
   %section.row
     .small-6.columns.box
       %header
