--- a/app/views/patients/edit.html.haml
+++ b/app/views/patients/edit.html.haml
@@ -10,5 +10,6 @@
   .col.pe-12
     %section.editPatientContainer
       %header
-        %h3 Edit Patient Details
+        %h3
+          = I18n.t('patients.edit.patient_details')
       = render 'form'
