--- a/app/assets/stylesheets/_custom.scss
+++ b/app/assets/stylesheets/_custom.scss
@@ -90,47 +90,47 @@
 }
 
 .chart-container-barright{
-	-webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.35);
-	-moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.35);
-	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.35);
-	margin:40px 1% 0px 0px;
-	padding:20px;
-	padding-top:10px;
-	float:right;
-	width:47%;
-	position:relative;
-	height:100%;
-	overflow:auto;
-	overflow: auto;
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.35);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.35);
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.35);
+  margin:40px 1% 0px 0px;
+  padding:20px;
+  padding-top:10px;
+  float:right;
+  width:47%;
+  position:relative;
+  height:100%;
+  overflow:auto;
+  overflow: auto;
 }
 
 .chart-container-pieleft{
-	-webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.35);
-	-moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.35);
-	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.35);
-	margin:40px 0px 0px 1%;
-	padding:20px;
-	padding-top:10px;
-	float:left;
-	width:31%;
-	position:relative;
-	height:100%;
-	overflow: auto;
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.35);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.35);
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.35);
+  margin:40px 0px 0px 1%;
+  padding:20px;
+  padding-top:10px;
+  float:left;
+  width:31%;
+  position:relative;
+  height:100%;
+  overflow: auto;
 }
 
 .chart-container-piebarright{
-	-webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.35);
-	-moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.35);
-	box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.35);
-	margin:40px 1% 0px 0px;
-	padding:20px;
-	padding-top:10px;
-	float:right;
-	width:65%;
-	position:relative;
-	height:100%;
-	overflow:auto;
-	overflow: auto;
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.35);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.35);
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.35);
+  margin:40px 1% 0px 0px;
+  padding:20px;
+  padding-top:10px;
+  float:right;
+  width:65%;
+  position:relative;
+  height:100%;
+  overflow:auto;
+  overflow: auto;
 }
 
 
@@ -385,4 +385,9 @@ text-align:center;
 .newtestoptions .side-link {
   margin-left: -42px !important;
   margin-right: 0px !important;
+}
+
+.text-highlight {
+  margin-top: 0.5em;
+  margin-bottom: 0em;
 }
