Ensure reason form is displayed when reject option is selected.

--- a/app/views/encounters/show.html.haml
+++ b/app/views/encounters/show.html.haml
@@ -14,8 +14,8 @@
   requestedTests: @encounter.requested_tests,
   requested_by: @encounter.user !=nil ? @encounter.user.email : '',
   can_update: has_access?(@encounter, Policy::Actions::UPDATE_ENCOUNTER),
-  show_edit: @show_edit_encounter,
-  show_cancel: @show_cancel_encounter,
+  showEdit: @show_edit_encounter,
+  showCancel: @show_cancel_encounter,
   referer: @return_path_encounter,
   statusTypes: RequestedTest.statuses,
   associatedTestsToResults: PatientResult.find_associated_tests_to_results(@encounter),
