Set institution read as default permission for everybody.

--- a/app/policies/implicit.json.erb
+++ b/app/policies/implicit.json.erb
@@ -1,7 +1,7 @@
 {
   "statement": [
     {
-      "action": ["institution:create"],
+      "action": ["institution:read"],
       "resource": ["institution"]
     }
   ]
