Link LPA/DST results, clean formatting and typos on comments, result dropdowns, new test orders, and reposition nickname field.

--- a/app/assets/stylesheets/_newlayout.scss
+++ b/app/assets/stylesheets/_newlayout.scss
@@ -899,3 +899,22 @@ ul.samples button.btn-primary {
     background:#ddd;
   }
 }
+
+
+.commentbox .col-6 {
+align-self: flex-start;
+}
+
+.commentbox label {
+width:100%;
+font-weight:bold;
+margin-top:30px;
+line-height:25px !important;
+min-height:25px !important;
+}
+
+.commentbox .col-12 {
+flex: 1 1 0;
+padding-right:10px;
+}
+
