--- a/app/views/comments/show.haml
+++ b/app/views/comments/show.haml
@@ -8,7 +8,7 @@
         %ul
           %li
             = link_to I18n.t('views.back'), patient_path(@comment.patient), class: 'button new'
-    .order-details
+    .order-details.commentbox
       .panel
         .row
           .col-6
