--- a/app/views/microscopy_results/show.haml
+++ b/app/views/microscopy_results/show.haml
@@ -7,7 +7,8 @@
       .col-6
         %ul
           %li
-            = link_to I18n.t('views.back'), encounter_path(@requested_test.encounter, :test_order_page_mode => @return_page_mode), class: 'button new'
+            = link_to("javascript:history.back();", class: 'button new') do
+              = I18n.t('views.back')
     .order-details
       .panel
         .row
